FullQa New/src/objects/Functional_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>API__c</fullName>
        <label>API</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>REST V1</fullName>
                </value>
                <value>
                    <fullName>REST V2</fullName>
                </value>
                <value>
                    <fullName>SOAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Validation_Achieved_Date__c</fullName>
        <label>Address Validation Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_Validation_Click_Path__c</fullName>
        <inlineHelpText>Describe the path of clicks that the user must take to find the Address Validation button. Is it on the customer record, the invoice/order screen, or both? Is there no button and it automatically happens upon save event?</inlineHelpText>
        <label>Address Validation Click Path</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Address_Validation__c</fullName>
        <label>Address Validation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brazil_Achieved_Date__c</fullName>
        <label>Brazil Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brazil__c</fullName>
        <label>Brazil</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_API__c</fullName>
        <label>C - API</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>REST V1</fullName>
                </value>
                <value>
                    <fullName>REST V2</fullName>
                </value>
                <value>
                    <fullName>SOAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_Address_Validation_Click_Path__c</fullName>
        <label>C - Address Validation Click Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_Client_Exemption_Click_Path__c</fullName>
        <label>C - Client Exemption Click Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_Company_Code__c</fullName>
        <label>C - Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Configuration_Click_Path__c</fullName>
        <label>C - Configuration Click Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_Implementation_Path__c</fullName>
        <label>C - Implementation Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_Line_Level_Addressing__c</fullName>
        <label>C - Line Level Addressing</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_Location_Code_Click_Path__c</fullName>
        <label>C- Location Code &amp; Click Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_Notes__c</fullName>
        <label>C - Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_Product_Mapping_Click_Path__c</fullName>
        <label>C - Product Mapping Click Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_Support_Path__c</fullName>
        <label>C - Support Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_Timing_For_Recording_Committing_Tran__c</fullName>
        <label>C-Timing For Recording &amp; Committing Tran</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_Timing_For_Tax_Calculation__c</fullName>
        <label>C - Timing For Tax Calculation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>C_User_Implementation_Guide__c</fullName>
        <label>C - User Implementation Guide</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Client_Exemption_Click_Path__c</fullName>
        <inlineHelpText>Describe the path of clicks that the user must take to find where they can apply Entity Use code or Exemption No data to a customer record.</inlineHelpText>
        <label>Client Exemption Click Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Communication_Achieved_Date__c</fullName>
        <label>Communication Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <label>Communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <inlineHelpText>Describe what value comes across to AvaTax as the Company Code, is it user defined or static?</inlineHelpText>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Click_Path__c</fullName>
        <inlineHelpText>Describe the path of clicks that the user must take to find the AvaTax configuration. Also note if it&apos;s gated by permissions.</inlineHelpText>
        <label>Configuration Click Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Functional Matrix</relationshipLabel>
        <relationshipName>Functional_Matrix</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Notes__c</fullName>
        <label>Core Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customs_Duty_Import_Tax_Achieved_Date__c</fullName>
        <label>Customs Duty &amp; Import Tax Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customs_Duty_Import_Tax__c</fullName>
        <label>Customs Duty &amp; Import Tax</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Management_Achieved_Date__c</fullName>
        <label>Document Management Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Management__c</fullName>
        <label>Document Management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duties_Tarrif_Achieved_Date__c</fullName>
        <label>Duties &amp; Tarrifs Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duties_Tarrifs__c</fullName>
        <label>Duties &amp; Tarrifs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalation Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Functional Matrix (Escalation Contact)</relationshipLabel>
        <relationshipName>Functional_Matrix2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Excise_Achieved_Date__c</fullName>
        <label>Excise Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excise__c</fullName>
        <label>Excise</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GST_Achieved_Date__c</fullName>
        <label>GST Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GST__c</fullName>
        <label>GST</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implemenation_Path__c</fullName>
        <label>Implementation Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Implementation_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Functional Matrix (Implementation Contact)</relationshipLabel>
        <relationshipName>Functional_Matrix1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Path__c</fullName>
        <label>Implementation Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Known_Issues__c</fullName>
        <inlineHelpText>Catch all field for known issues, caveats, anything worth noting that could possible trip a user up downstream.</inlineHelpText>
        <label>Known Issues</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Line_Level_Addressing__c</fullName>
        <inlineHelpText>State whether or not the integration can send AvaTax separate addresses at the line level. If so, describe how it can be done.</inlineHelpText>
        <label>Line Level Addressing</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location_Code_Click_Path__c</fullName>
        <inlineHelpText>Describe the path of clicks that the user must take to see the value that is sent to AvaTax as the Location Code on transactions.</inlineHelpText>
        <label>Location Code &amp; Click Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lodging_Achieved_Date__c</fullName>
        <label>Lodging Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lodging__c</fullName>
        <label>Lodging</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MultiTax_Achieved_Date__c</fullName>
        <label>MultiTax Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MultiTax__c</fullName>
        <label>MultiTax</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>POS_Achieved_Date__c</fullName>
        <label>POS Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POS__c</fullName>
        <label>POS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Mapping_Click_Path__c</fullName>
        <inlineHelpText>Describe the path of clicks that the user must take to find the area where they can map products/services to Avalara Tax Codes.</inlineHelpText>
        <label>Product Mapping Click Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Provisioning_Achieved_Date__c</fullName>
        <label>Provisioning Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provisioning__c</fullName>
        <label>Provisioning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refunds_Achieved_Date__c</fullName>
        <label>Refunds Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refunds__c</fullName>
        <label>Refunds</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Tax_Achieved_Date__c</fullName>
        <label>Sales Tax Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_AvaTax_Achieved_Date__c</fullName>
        <label>Sales Tax - AvaTax Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_AvaTax__c</fullName>
        <label>Sales Tax - AvaTax</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Tax_TrustFile_Achieved_Date__c</fullName>
        <label>Sales Tax - TrustFile Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_TrustFile__c</fullName>
        <label>Sales Tax - TrustFile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Notes__c</fullName>
        <label>Support Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_Support_Path__c</fullName>
        <label>Support - Support Path</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Timing_For_Tax_Calculation__c</fullName>
        <inlineHelpText>Describe the events and triggers which call out to AvaTax. Is it manually by a calculate button? Automatically on save event? State all stages of transaction life cycle where a call is made, estimate, order, invoice etc.</inlineHelpText>
        <label>Timing For Tax Calculation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Timing_for_recording_Committing_Trans__c</fullName>
        <label>Timing for recording &amp; Committing Trans.</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Timing_for_recording_Committing_Transa__c</fullName>
        <label>Timing for recording &amp; Committing Transa</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Tax_Achieved_Date__c</fullName>
        <label>Use Tax Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Use_Tax__c</fullName>
        <label>Use Tax</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Guide_URL__c</fullName>
        <label>User Guide URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Implementation_Guide__c</fullName>
        <inlineHelpText>The User Implementation Guide should contain screenshots and information allowing the end user to configure for AvaTax including where the company code is entered, where the credentials are entered and where tax codes can be mapped within the application.</inlineHelpText>
        <label>User Implementation Guide</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VAT_Achieved_Date__c</fullName>
        <label>VAT Achieved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Badges_Achieved</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <referenceTo>Version__c</referenceTo>
        <relationshipLabel>Functional Matrix</relationshipLabel>
        <relationshipName>Functional_Matrix</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Functional Matrix</label>
    <nameField>
        <displayFormat>FM-{000000}</displayFormat>
        <label>Functional Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Functional Matrix</pluralLabel>
    <recordTypes>
        <fullName>Core_Address_Validation</fullName>
        <active>true</active>
        <label>Core Address Validation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Communication</fullName>
        <active>true</active>
        <label>Core Communication</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Document_Management</fullName>
        <active>true</active>
        <label>Core Document Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Excise</fullName>
        <active>true</active>
        <label>Core Excise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Extractor_AvaTax</fullName>
        <active>true</active>
        <label>Core Extractor AvaTax</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Extractor_TrustFile</fullName>
        <active>true</active>
        <label>Core Extractor TrustFile</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Lodging</fullName>
        <active>true</active>
        <label>Core Lodging</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Sales_Tax</fullName>
        <active>true</active>
        <label>Core Sales Tax</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Use_Tax</fullName>
        <active>true</active>
        <label>Core Use Tax</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>